objects/CICIActivity__c.object
<CustomObject><fields>
        <fullName>activity__c</fullName>
        <description>major activity</description>
        <inlineHelpText>pick a major activity</inlineHelpText>
        <label>activity</label>
        <picklist>
            <picklistValues>
                <fullName>eat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sleep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>poo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>play</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>emailme__c</fullName>
        <label>emailme</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>relatedActivity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CICIActivity</label>
        <referenceTo>CICIActivity__c</referenceTo>
        <relationshipLabel>CICIActivities</relationshipLabel>
        <relationshipName>CICIActivities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>subactivity__c</fullName>
        <description>depends on activity</description>
        <label>subactivity</label>
        <picklist>
            <controllingField>activity__c</controllingField>
            <picklistValues>
                <fullName>formula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mmilk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pee_poo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>big</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>small</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>timestamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>time stamp of this activity</description>
        <label>timestamp</label>
        <type>DateTime</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>log of activities for cici</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>CICIActivity</label><nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>CICI Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>CICIActivities</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>